# ml-obesity-final-project

./: .gitignore  Readme.md  pyproject.toml
.ipynb_checkpoints/: Readme-checkpoint.md
Código/: Agrupación de Datos - Final Project - Obesidad.ipynb
Código/.ipynb_checkpoints/: Agrupación de Datos - Final Project - Obesidad-checkpoint.ipynb
Documentación/: Agrupación de Datos - Final Project - Obesidad.html
Modelos/: obesity_levels_kmeans_randomsearch_model.joblib
