[tool.poetry]
name = "ml-obesity-final-project"
version = "0.1.0"
description = ""
authors = ["Jiliar Silgado <jiliar.silgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
llvmlite = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"