[tool.poetry]
name = "ml-obesity-final-project"
version = "0.1.0"
description = ""
authors = ["Jiliar Silgado <jiliar.silgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
shap = "^0.46.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
